--- a/DataCorner/TD/src/app/component/header/header.component.html
+++ b/DataCorner/TD/src/app/component/header/header.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <button mat-icon-button class="example-icon" (click)="Home()" aria-label="Example icon-button with menu icon">
       <mat-icon>home</mat-icon>
     </button>
-    <span>My App</span>
+    <span>HRMS</span>
   
     <span class="example-spacer"></span>
   
