--- a/DataCorner/TD/src/app/component/login/login.component.html
+++ b/DataCorner/TD/src/app/component/login/login.component.html
@@ -64,6 +64,9 @@
                             <mat-form-field appearance="outline">
                               <mat-label>Password</mat-label>
                               <input matInput type="password" formControlName="password" required>
+                              <mat-icon matSuffix (click)="togglePasswordVisibility()">
+                                {{ passwordVisible ? 'visibility_off' : 'visibility' }}
+                              </mat-icon>
                             </mat-form-field>
                         </div>
                             <button mat-raised-button color="primary" type="submit">Login</button>
