--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -28,7 +28,7 @@
         <!-- EmployeeId Column -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>EmployeeId</th>
-          <td mat-cell *matCellDef="let user">{{ user.emp_Id }}</td>
+          <td mat-cell *matCellDef="let user">{{ user.empId }}</td>
         </ng-container>
 
         <!-- Name Column -->
@@ -52,7 +52,7 @@
         <!-- SkillSet Column -->
         <ng-container matColumnDef="SkillSet">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>SkillSet</th>
-          <td mat-cell *matCellDef="let user">{{ user.skillSet}}</td>
+          <td mat-cell *matCellDef="let user">{{ user.skill_Set}}</td>
         </ng-container>
 
         <!-- Months_in_SS Column -->
