Export function implementation u/p

--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.scss
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.scss
@@ -72,3 +72,11 @@ mat-paginator {
 .odd-row {
   background-color: #f5f5f5; /* Set the background color for odd rows */
 }
+.search-box {
+  display: flex;
+  align-items: center;
+}
+.button-container {
+  display: flex;
+  gap: 10px; /* Adjust this value to set the space between buttons */
+}
