--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -13,6 +13,10 @@
         <button class="Btn" mat-raised-button color="primary" (click)="addForm()">
           <div class="text">Add</div>
         </button>
+
+        <button class="ExprtBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="exportToExcel()">
+          <div class="text">Export</div>
+        </button>
       </ng-container>
     </div>
 
