Export the data from table

--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -14,7 +14,7 @@
           <div class="text">Add</div>
         </button>
 
-        <button class="ExprtBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="exportToExcel()">
+        <button class="ExprtBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="downloadExcel()">
           <div class="text">Export</div>
         </button>
       </ng-container>
