--- a/DataCorner/TD/src/app/component/view-form/view-form.component.scss
+++ b/DataCorner/TD/src/app/component/view-form/view-form.component.scss
@@ -59,6 +59,7 @@
     display: flex;
     justify-content: flex-start; 
     margin-bottom: 5px;
+    margin-left: 7px;
     padding-left: 15px;
   }
   
