--- a/DataCorner/TD/src/app/component/login/login.component.html
+++ b/DataCorner/TD/src/app/component/login/login.component.html
@@ -1,5 +1,3 @@
-
-
 <!--<mat-toolbar >
     <mat-toolbar-row>
       <div class="main-menu">
@@ -39,45 +37,48 @@
             <button mat-raised-button color="primary" type="submit">Login</button>
           </form>
         </div>-->
-        <div class="container p-5 my-5">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="../../../assets/logingif2.gif" class="img-fluid float-start" alt="GIF Image">
+<div class="container p-5 my-5">
+  <div class="row">
+    <div class="col-md-6">
+      <img src="../../../assets/logingif2.gif" class="img-fluid float-start" alt="GIF Image">
+    </div>
+    <div class="col-md-2">
+
+    </div>
+    <div class="col-md-4 my-5">
+      <div class="card">
+        <div class="card-body">
+          <div class="card-title">
+            <h1>Login</h1>
+          </div>
+          <div class="card-text">
+            <form [formGroup]="loginForm" (ngSubmit)="login()" class="container">
+              <div class="row">
+                <mat-form-field appearance="outline">
+                  <mat-label>Username</mat-label>
+                  <input matInput formControlName="username" required>
+                  <mat-icon matSuffix>person</mat-icon>
+                </mat-form-field>
+              </div>
+              <div class="row">
+                <mat-form-field appearance="outline">
+                  <mat-label>Password</mat-label>
+                  <input matInput type="password" formControlName="password" required>
+                  <mat-icon matSuffix (click)="togglePasswordVisibility()">
+                    {{ passwordVisible ? 'visibility_off' : 'visibility' }}
+                  </mat-icon>
+                </mat-form-field>
+              </div>
+              <button mat-raised-button color="primary" type="submit">Login</button>
+              
+              <div class="loading-overlay" *ngIf="showSpinner">
+                <mat-spinner *ngIf="showSpinner" diameter="60" color="blue"></mat-spinner>
+              </div>
+
+            </form>
+          </div>
         </div>
-        <div class="col-md-2">
-            
-        </div>
-        <div class="col-md-4 my-5">
-            <div class="card">
-                <div class="card-body">
-                    <div class="card-title"><h1>Login</h1></div>
-                    <div class="card-text">
-                        <form [formGroup]="loginForm" (ngSubmit)="login()" class="container">
-                            <div class="row">
-                            <mat-form-field appearance="outline">
-                              <mat-label>Username</mat-label>
-                              <input matInput formControlName="username" required>
-                              <mat-icon matSuffix>person</mat-icon>
-                            </mat-form-field>
-                            </div>
-                            <div class="row">
-                            <mat-form-field appearance="outline">
-                              <mat-label>Password</mat-label>
-                              <input matInput type="password" formControlName="password" required>
-                              <mat-icon matSuffix (click)="togglePasswordVisibility()">
-                                {{ passwordVisible ? 'visibility_off' : 'visibility' }}
-                              </mat-icon>
-                            </mat-form-field>
-                        </div>
-                            <button mat-raised-button color="primary" type="submit">Login</button>
-                          </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
   </div>
-        
-            
-                
-          
+</div>
