--- a/DataCorner/TD/src/app/component/dashboard/dashboard.component.scss
+++ b/DataCorner/TD/src/app/component/dashboard/dashboard.component.scss
@@ -6,10 +6,11 @@
 //     min-height: 50px;
 //     padding-top: 20px;
 //   }
-.row{
+.row {
     display: flex;
     justify-content: space-evenly;
 }
+
 mat-card {
     all: unset;
     border-radius: 4px;
@@ -28,7 +29,8 @@ mat-card {
     line-height: 24px;
 
 }
-p{
+
+p {
     font-size: 25px;
     font-weight: 900;
 }
@@ -38,3 +40,13 @@ mat-card:hover {
     transform: translateY(-3px);
     box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
 }
+
+// .card-container {
+//     position: relative;
+//     display: inline-block;
+// }
+
+// .overlay-button {
+//     margin-top: 50px;
+//     margin-left: 120px;
+// }
