--- a/DataCorner/TD/src/app/component/header/header.component.html
+++ b/DataCorner/TD/src/app/component/header/header.component.html
@@ -2,7 +2,7 @@
     <button mat-icon-button class="example-icon" (click)="Home()" aria-label="Example icon-button with menu icon">
       <mat-icon>home</mat-icon>
     </button>
-    <span>HRMS</span>
+    <span>SIGHT SPECTRUM</span>
   
     <span class="example-spacer"></span>
   
