--- a/DataCorner/TD/src/app/component/view-form/view-form.component.html
+++ b/DataCorner/TD/src/app/component/view-form/view-form.component.html
@@ -3,7 +3,7 @@
         <mat-icon class="material-symbols-outlined">
             edit_note
         </mat-icon>
-        <span>Form</span>
+        <span>Trainee Details</span>
         <span class="example-spacer"></span>
         <!-- <div class="action">
             <button mat-raised-button color="warn" type="button">Cancel</button>&nbsp;
@@ -64,7 +64,7 @@
                 </mat-form-field>
             </div> -->
 
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <mat-form-field appearance="outline">
                     <mat-label>Category</mat-label>
                     <input matInput placeholder="Category" formControlName="category">
@@ -72,7 +72,18 @@
                         Category is required.
                     </mat-error>
                 </mat-form-field>
-            </div>
+            </div> -->
+            <div class="col-md-3">
+                <mat-form-field appearance="outline">
+                  <mat-label>Category</mat-label>
+                  <mat-select formControlName="category">
+                    <mat-option *ngFor="let categoryOption of categoryOptions" [value]="categoryOption">{{ categoryOption }}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="myForm.get('category')?.invalid && myForm.get('category')?.touched">
+                    Category is required.
+                  </mat-error>
+                </mat-form-field>
+              </div>
 
             <!-- <div class="col-md-3">
                 <mat-form-field appearance="outline">
@@ -106,7 +117,7 @@
                 </mat-form-field>
             </div>
 
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <mat-form-field appearance="outline">
                     <mat-label>Skill Set</mat-label>
                     <input matInput placeholder="Skill Set" formControlName="skill_Set">
@@ -114,8 +125,19 @@
                         Skill Set is required.
                     </mat-error>
                 </mat-form-field>
-            </div>
-
+            </div> -->
+            <!-- Assuming you have defined skillSetOptions in your component as an array of skill set options -->
+            <div class="col-md-3">
+                <mat-form-field appearance="outline">
+                  <mat-label>Skill Set</mat-label>
+                  <mat-select formControlName="skill_Set">
+                    <mat-option *ngFor="let skillSetOption of skillSetOptions" [value]="skillSetOption">{{ skillSetOption }}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="myForm.get('skill_Set')?.invalid && myForm.get('skill_Set')?.touched">
+                    Skill Set is required.
+                  </mat-error>
+                </mat-form-field>
+            </div>         
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                     <mat-label>Reporting Person</mat-label>
@@ -184,7 +206,7 @@
                 </mat-form-field>
             </div>
 
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <mat-form-field appearance="outline">
                     <mat-label>Education</mat-label>
                     <input matInput placeholder="Education" formControlName="education">
@@ -192,7 +214,18 @@
                         Education is required.
                     </mat-error>
                 </mat-form-field>
-            </div>
+            </div> -->
+            <div class="col-md-3">
+                <mat-form-field appearance="outline">
+                  <mat-label>Education</mat-label>
+                  <mat-select formControlName="education">
+                    <mat-option *ngFor="let educationOption of educationOptions" [value]="educationOption">{{ educationOption }}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="myForm.get('education')?.invalid && myForm.get('education')?.touched">
+                    Education is required.
+                  </mat-error>
+                </mat-form-field>
+              </div>
 
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
@@ -214,7 +247,7 @@
                 </mat-form-field>
             </div>
 
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <mat-form-field appearance="outline">
                     <mat-label>Current Location</mat-label>
                     <input matInput placeholder="Current Location" formControlName="location">
@@ -222,7 +255,19 @@
                         Current Location is required.
                     </mat-error>
                 </mat-form-field>
-            </div>
+            </div> -->
+            <div class="col-md-3">
+                <mat-form-field appearance="outline">
+                  <mat-label>Current Location</mat-label>
+                  <mat-select formControlName="location">
+                    <mat-option *ngFor="let locationOption of locationOptions" [value]="locationOption">{{ locationOption }}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="myForm.get('location')?.invalid && myForm.get('location')?.touched">
+                    Current Location is required.
+                  </mat-error>
+                </mat-form-field>
+              </div>
+
 
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
@@ -277,7 +322,7 @@
                 </mat-form-field>
             </div>
 
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <mat-form-field appearance="outline">
                     <mat-label>Batch</mat-label>
                     <input matInput placeholder="Batch" formControlName="batch">
@@ -285,8 +330,18 @@
                         Batch is required.
                     </mat-error>
                 </mat-form-field>
-            </div>
-
+            </div> -->
+            <div class="col-md-3">
+                <mat-form-field appearance="outline">
+                  <mat-label>Batch</mat-label>
+                  <mat-select formControlName="batch">
+                    <mat-option *ngFor="let batchOption of batchOptions" [value]="batchOption">{{ batchOption }}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="myForm.get('batch')?.invalid && myForm.get('batch')?.touched">
+                    Batch is required.
+                  </mat-error>
+                </mat-form-field>
+              </div>           
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                     <mat-label>Contact</mat-label>
@@ -310,7 +365,7 @@
 
     </div>
     <div class="action">
-        <button mat-raised-button color="primary" type="submit">Submit</button>
+        <button mat-raised-button color="primary" type="submit">{{ isUpdateMode ? 'Update' : 'Submit' }}</button>
         <button mat-raised-button color="warn" type="button">Cancel</button>
         <!-- Use ng-container to conditionally display the submit button for 'admin' user role -->
         <!-- <ng-container *ngIf="userRole === 'admin'"> -->
