--- a/DataCorner/TD/src/app/component/login/login.component.html
+++ b/DataCorner/TD/src/app/component/login/login.component.html
@@ -63,7 +63,7 @@
               <div class="row">
                 <mat-form-field appearance="outline">
                   <mat-label>Password</mat-label>
-                  <input matInput type="password" formControlName="password" required>
+                  <input matInput type="password" formControlName="pwd" required>
                   <mat-icon matSuffix (click)="togglePasswordVisibility()">
                     {{ passwordVisible ? 'visibility_off' : 'visibility' }}
                   </mat-icon>
