--- a/DataCorner/TD/src/app/component/header/header.component.html
+++ b/DataCorner/TD/src/app/component/header/header.component.html
@@ -2,13 +2,14 @@
     <button mat-icon-button class="example-icon" (click)="Home()" aria-label="Example icon-button with menu icon">
       <mat-icon>home</mat-icon>
     </button>
-    <span>SIGHT SPECTRUM</span>
+    <!-- <span>SIGHT SPECTRUM</span> -->
+    <img src="../../../assets/SightspectrumName.jpeg" class="headerLogo" alt="Logo">
   
     <span class="example-spacer"></span>
   
     <span class="example-fill-remaining-space"></span>
   
-    <button mat-stroked-button  class ="login-button"(click)="logout()">Log out</button>
+    <button mat-raised-button  color="warn"  class ="login-button"(click)="logout()">Log out</button>
   </mat-toolbar>
     
  
