--- a/DataCorner/TD/src/app/component/login/login.component.html
+++ b/DataCorner/TD/src/app/component/login/login.component.html
@@ -48,7 +48,8 @@
     <div class="col-md-4 my-5">
       <div class="card">
         <div class="card-body">
-          <div class="card-title">
+          <img src="../../assets/SightspectrumName.jpeg" class="logo" alt="Logo">
+          <div class="card-title" style="text-align: center;">
             <h1>Login</h1>
           </div>
           <div class="card-text">
