Divsion id i button and division id table info-popup.component created and api creation

--- a/DataCorner/TD/src/app/component/view-form/view-form.component.scss
+++ b/DataCorner/TD/src/app/component/view-form/view-form.component.scss
@@ -68,7 +68,20 @@
     margin-right: 10px; 
     padding: 10px ; 
   }
+  .input-with-info {
+    position: relative;
+  }
   
+  .input-with-info input {
+    padding-right: 40px; /* Adjust as needed to create space for the button */
+  }
+  
+  .input-with-info button {
+    position: absolute;
+    top: 50%;
+    right: 5px; /* Adjust as needed for the desired distance from the right edge */
+    transform: translateY(-50%);
+  }
   
 
   
