--- a/DataCorner/TD/src/app/component/view-form/view-form.component.html
+++ b/DataCorner/TD/src/app/component/view-form/view-form.component.html
@@ -5,10 +5,6 @@
         </mat-icon>
         <span>Trainee Details</span>
         <span class="example-spacer"></span>
-        <!-- <div class="action">
-            <button mat-raised-button color="warn" type="button">Cancel</button>&nbsp;
-            <button mat-raised-button  type="submit">Save</button>
-        </div> -->
     </mat-toolbar>
     <br>
     <br>
@@ -43,16 +39,6 @@
                     </mat-error>
                 </mat-form-field>
             </div>
-
-            <!-- <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Project ID</mat-label>
-                    <input matInput placeholder="Project ID" formControlName="project_Id">
-                    <mat-error *ngIf="myForm.get('project_Id')?.invalid && myForm.get('project_Id')?.touched">
-                        Project ID is required.
-                    </mat-error>
-                </mat-form-field>
-            </div> -->
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                   <mat-label>Project ID</mat-label>
@@ -64,26 +50,6 @@
                   </mat-error>
                 </mat-form-field>
               </div>
-
-            <!-- <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Project Name</mat-label>
-                    <input matInput placeholder="Project Name" formControlName="project_Name">
-                    <mat-error *ngIf="myForm.get('project_Name')?.invalid && myForm.get('project_Name')?.touched">
-                        Project Name is required.
-                    </mat-error>
-                </mat-form-field>
-            </div> -->
-
-            <!-- <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Category</mat-label>
-                    <input matInput placeholder="Category" formControlName="category">
-                    <mat-error *ngIf="myForm.get('category')?.invalid && myForm.get('category')?.touched">
-                        Category is required.
-                    </mat-error>
-                </mat-form-field>
-            </div> -->
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                   <mat-label>Category</mat-label>
@@ -95,19 +61,6 @@
                   </mat-error>
                 </mat-form-field>
               </div>
-
-            <!-- <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Project Change Date</mat-label>
-                    <input matInput [matDatepicker]="picker" placeholder="Project Change Date" formControlName="pcd">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                    <mat-error
-                        *ngIf="myForm.get('pcd')?.invalid && myForm.get('pcd')?.touched">
-                        Project Change Date is required.
-                    </mat-error>
-                </mat-form-field>
-            </div> -->
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                     <mat-label>Project Change Date</mat-label>
@@ -127,17 +80,6 @@
                     </mat-error>
                 </mat-form-field>
             </div>
-
-            <!-- <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Skill Set</mat-label>
-                    <input matInput placeholder="Skill Set" formControlName="skill_Set">
-                    <mat-error *ngIf="myForm.get('skill_Set')?.invalid && myForm.get('skill_Set')?.touched">
-                        Skill Set is required.
-                    </mat-error>
-                </mat-form-field>
-            </div> -->
-            <!-- Assuming you have defined skillSetOptions in your component as an array of skill set options -->
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                   <mat-label>Skill Set</mat-label>
@@ -158,55 +100,22 @@
                     </mat-error>
                 </mat-form-field>
             </div>
-            <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Division ID</mat-label>  
-                    <input matInput placeholder="Division Id" formControlName="division_id">
-                    <mat-error *ngIf="myForm.get('division_id')?.invalid && myForm.get('division_id')?.touched">
-                        Division is required.
-                    </mat-error>
-                </mat-form-field>
-            </div>
-            <!-- <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Division</mat-label>
-                    <input matInput placeholder="Division" formControlName="division">
-                    <mat-error *ngIf="myForm.get('division')?.invalid && myForm.get('division')?.touched">
-                        Division is required.
-                    </mat-error>
-                </mat-form-field>
-            </div>
-            <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Sub Div</mat-label>
-                    <input matInput placeholder="Sub Div" formControlName="sub_Div">
-                    <mat-error *ngIf="myForm.get('sub_Div')?.invalid && myForm.get('sub_Div')?.touched">
-                        Sub Div is required.
-                    </mat-error>
-                </mat-form-field>
-            </div>
+            <!-- ... your original code ... -->
 
-            <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Skill Categories</mat-label>
-                    <input matInput placeholder="Skill Categories" formControlName="skill_Catagories">
-                    <mat-error *ngIf="myForm.get('skill_Catagories')?.invalid && myForm.get('skill_Catagories')?.touched">
-                        Skill Categories is required.
-                    </mat-error>
-                </mat-form-field>
-            </div>
-
-            <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Skill Clusters</mat-label>
-                    <input matInput placeholder="Skill Clusters" formControlName="skill_Clusters">
-                    <mat-error *ngIf="myForm.get('skill_Clusters')?.invalid && myForm.get('skill_Clusters')?.touched">
-                        Skill Clusters is required.
-                    </mat-error>
-                </mat-form-field>
-            </div>  -->
-
-
+<div class="col-md-3">
+    <mat-form-field appearance="outline">
+      <mat-label>Division ID</mat-label>
+      <div class="input-with-info">
+        <input matInput placeholder="Division Id" formControlName="division_id">
+        <button mat-icon-button matSuffix (click)="openInfoPopup($event)">
+            <mat-icon>info</mat-icon>
+          </button>
+      </div>
+      <mat-error *ngIf="myForm.get('division_id')?.invalid && myForm.get('division_id')?.touched">
+        Division is required.
+      </mat-error>
+    </mat-form-field>
+  </div>          
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                     <mat-label>Year of Passout</mat-label>
@@ -216,16 +125,6 @@
                     </mat-error>
                 </mat-form-field>
             </div>
-
-            <!-- <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Education</mat-label>
-                    <input matInput placeholder="Education" formControlName="education">
-                    <mat-error *ngIf="myForm.get('education')?.invalid && myForm.get('education')?.touched">
-                        Education is required.
-                    </mat-error>
-                </mat-form-field>
-            </div> -->
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                   <mat-label>Education</mat-label>
@@ -257,16 +156,6 @@
                     </mat-error>
                 </mat-form-field>
             </div>
-
-            <!-- <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Current Location</mat-label>
-                    <input matInput placeholder="Current Location" formControlName="location">
-                    <mat-error *ngIf="myForm.get('location')?.invalid && myForm.get('location')?.touched">
-                        Current Location is required.
-                    </mat-error>
-                </mat-form-field>
-            </div> -->
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                   <mat-label>Current Location</mat-label>
@@ -332,16 +221,6 @@
                     </mat-error>
                 </mat-form-field>
             </div>
-
-            <!-- <div class="col-md-3">
-                <mat-form-field appearance="outline">
-                    <mat-label>Batch</mat-label>
-                    <input matInput placeholder="Batch" formControlName="batch">
-                    <mat-error *ngIf="myForm.get('batch')?.invalid && myForm.get('batch')?.touched">
-                        Batch is required.
-                    </mat-error>
-                </mat-form-field>
-            </div> -->
             <div class="col-md-3">
                 <mat-form-field appearance="outline">
                   <mat-label>Batch</mat-label>
@@ -380,7 +259,3 @@
         <button mat-raised-button color="warn" type="button">Cancel</button>
       </div>      
 </form>
-
-<!-- <div class="action">
-    <button mat-raised-button color="primary" type="submit">{{ data ? 'Update' : 'Save' }}</button>
-  </div> -->
