Ui allignment changed and navigation button added

--- a/DataCorner/TD/src/app/component/header/header.component.html
+++ b/DataCorner/TD/src/app/component/header/header.component.html
@@ -1,9 +1,12 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" (click)="Home()" aria-label="Example icon-button with menu icon">
+    <!-- <button mat-icon-button class="example-icon" (click)="Home()" aria-label="Example icon-button with menu icon">
       <mat-icon>home</mat-icon>
-    </button>
+    </button> -->
     <!-- <span>SIGHT SPECTRUM</span> -->
-    <img src="../../../assets/SightspectrumName.jpeg" class="headerLogo" alt="Logo">
+    
+    <button type="button" (click)="Home()" style="border-color:transparent;">
+      <img src="../../../assets/SightspectrumName.jpeg" class="headerLogo" alt="Logo" >
+    </button>
   
     <span class="example-spacer"></span>
   
