--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <div class="example-button-container">
-  <button mat-fab color="primary" aria-label="Example icon button with a home icon" class="backButton" (click)="goBackToDashboard()">
+  <button mat-fab color="primary" aria-label="Example icon button with a home icon" class="backButton" (click)="goBack()">
     <span class="material-icons">arrow_back</span>
   </button>
   <h2>Trainee List</h2>
@@ -9,13 +9,16 @@
 
 <mat-card>
   <mat-card-content>
-    <div class="search-box">
+    <div class="row">
+      <div class="col-md-3">
       <mat-form-field appearance="outline">
         <mat-label>Search</mat-label>
         <input matInput placeholder (keyup)="applyFilter($event)" #input />
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
-
+    </div>
+    <div class="col-md-7"></div>
+    <div class="col-md-2" style="padding-left: 4%;">
       <ng-container *ngIf="userRole === 'admin'">
         <button class="Btn" mat-raised-button color="primary" (click)="addForm()">
           <div class="text">Add</div>
@@ -26,7 +29,7 @@
         </button>
       </ng-container>
     </div>
-
+  </div>
     <div class="mat-elevation-z4">
       <table mat-table [dataSource]="dataSource" matSort>
 
