--- a/DataCorner/TD/src/app/component/view-form/view-form.component.html
+++ b/DataCorner/TD/src/app/component/view-form/view-form.component.html
@@ -252,7 +252,7 @@
         </div>
 
     </div>
-    <div class="action" *ngIf="userRole === 'admin'">
+    <div class="action" *ngIf="userRole === 'admin'" style="margin-top: -18px;">
         <button mat-raised-button color="primary" type="submit" >{{ isUpdateMode ? 'Update' : 'Submit' }}</button>
         <button mat-raised-button color="warn" type="button">Cancel</button>
       </div>      
