--- a/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
+++ b/DataCorner/TD/src/app/component/dashboard/dashboard.component.html
@@ -17,9 +17,11 @@
               <b>{{ cardData.billable }}</b>
             </mat-card-content>
           </mat-card>
+          <ng-container *ngIf="userRole === 'admin'">
           <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('BL')">
             Export<mat-icon>download</mat-icon>
           </button>
+        </ng-container>
         </div>
       </div>
     </div>
@@ -33,9 +35,11 @@
               <b>{{ cardData.nonBillableDeploy }}</b>
             </mat-card-content>
           </mat-card>
+          <ng-container *ngIf="userRole === 'admin'">
           <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('NBD')" >
             Export<mat-icon>download</mat-icon>
           </button>
+        </ng-container>
         </div>
       </div>
     </div>
@@ -51,9 +55,11 @@
               <b>{{ cardData.nonBillableA }}</b>
             </mat-card-content>
           </mat-card>
+          <ng-container *ngIf="userRole === 'admin'">
           <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('NBA')">
             Export<mat-icon>download</mat-icon>
           </button>
+        </ng-container>
         </div>
       </div>
     </div>
@@ -68,9 +74,11 @@
               <b>{{ cardData.nonBillableDeployA }}</b>
             </mat-card-content>
           </mat-card>
+          <ng-container *ngIf="userRole === 'admin'">
           <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('NBDA')" >
             Export<mat-icon>download</mat-icon>
           </button>
+        </ng-container>
         </div>
       </div>
     </div>
@@ -87,9 +95,11 @@
               <b>{{ cardData.nonBillableNonUtilize }}</b>
             </mat-card-content>
           </mat-card>
+          <ng-container *ngIf="userRole === 'admin'">
           <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('NBNU')">
             Export<mat-icon>download</mat-icon>
           </button>
+        </ng-container>
         </div>
       </div>
     </div>
@@ -104,9 +114,11 @@
               <b>{{ cardData.allTrainees }}</b>
             </mat-card-content>
           </mat-card>
+          <ng-container *ngIf="userRole === 'admin'">
           <button mat-stroked-button matTooltip="Download" class="btn-border" (click)="downloadExcel('All')">
             Export<mat-icon>download</mat-icon>
           </button>
+        </ng-container>
         </div>
       </div>
     </div>
