--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -16,83 +16,79 @@
           <input matInput placeholder (keyup)="applyFilter($event)" #input />
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
-      </div>                
-    <div class="col-md-7"></div>
-    <div class="col-md-2" style="padding-left: 2%;">
-      <ng-container *ngIf="userRole === 'admin'">
-        <button class="Btn" mat-raised-button color="primary" (click)="addForm()">
-          <div class="text">Add</div>
-        </button>
+      </div>
+      <div class="col-md-7"></div>
+      <div class="col-md-2" style="padding-left: 2%;">
+        <ng-container *ngIf="userRole === 'admin'">
+          <button class="Btn" mat-raised-button color="primary" (click)="addForm()">
+            <div class="text">Add</div>
+          </button>
 
-        <button class="ExprtBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="downloadExcel()">
-          <div class="text">Export</div><mat-icon>download</mat-icon>
-        </button>
-      </ng-container>
+          <button class="ExprtBtn" mat-raised-button color="primary" style="margin-left: 5px;" (click)="downloadExcel()">
+            <div class="text">Export</div><mat-icon>download</mat-icon>
+          </button>
+        </ng-container>
+      </div>
     </div>
-  </div>
     <div class="mat-elevation-z4">
+      <div class="column-selector">
+        <!-- <mat-checkbox [(ngModel)]="showColumns">Show Columns</mat-checkbox> -->
+        <mat-select [(ngModel)]="selectedColumns" multiple>
+          <mat-option *ngFor="let column of columns" [value]="column">{{ column }}</mat-option>
+        </mat-select>
+      </div>
+
       <table mat-table [dataSource]="dataSource" matSort>
 
-        <!-- Serial Number Column -->
         <ng-container matColumnDef="serialNumber">
           <th mat-header-cell *matHeaderCellDef>No</th>
           <td mat-cell *matCellDef="let i = index">{{ i + 1 }}</td>
         </ng-container>
 
-        <!-- EmployeeId Column -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>EmployeeId</th>
           <td mat-cell *matCellDef="let user">{{ user.empId }}</td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
           <td mat-cell *matCellDef="let user">{{ user.name }}</td>
         </ng-container>
 
-        <!-- Email Column -->
         <ng-container matColumnDef="Email">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
           <td mat-cell *matCellDef="let user">{{ user.mailId }}</td>
         </ng-container>
 
-        <!-- Phone Column -->
         <ng-container matColumnDef="Phone">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
           <td mat-cell *matCellDef="let user">{{ user.contact }}</td>
         </ng-container>
 
-        <!-- SkillSet Column -->
         <ng-container matColumnDef="SkillSet">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>SkillSet</th>
           <td mat-cell *matCellDef="let user">{{ user.skill_Set}}</td>
         </ng-container>
 
-        <!-- Months_in_SS Column -->
         <ng-container matColumnDef="Months_in_SS">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Months_in_SS</th>
           <td mat-cell *matCellDef="let user">{{ user.months_in_SS}}</td>
         </ng-container>
+        
 
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
-          <td mat-cell *matCellDef="let user" (click)="openEditForm(user)">
+          <td mat-cell *matCellDef="let user" (click)="openEditForm(user)" >
             <button mat-icon-button color="primary">
               <mat-icon class="material-symbols-outlined">visibility</mat-icon>
             </button>
           </td>
         </ng-container>
 
-        <!-- Define the column order, including the 'serialNumber' column -->
-        <tr mat-header-row
-          *matHeaderRowDef="['serialNumber', 'id', 'name', 'Email', 'Phone', 'SkillSet', 'Months_in_SS', 'actions']">
-        </tr>
-        <tr mat-row
-          *matRowDef="let row; columns: ['serialNumber', 'id', 'name', 'Email', 'Phone', 'SkillSet', 'Months_in_SS', 'actions']; let even = even; let odd = odd"
+        <tr mat-header-row *matHeaderRowDef="selectedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: selectedColumns; let even = even; let odd = odd"
           [class.even-row]="even" [class.odd-row]="odd"></tr>
 
-        No data row
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="8">No data matching the filter "{{ input.value }}"</td>
         </tr>
