--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -7,6 +7,10 @@
   </button>
   <h2>Trainee List</h2>
   <h2> - {{category}}</h2>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <button class="Btn1" mat-raised-button color="primary" (click)="addcolumns()">
+    <div class="text">Manage Permission</div>
+  </button>
 </div>
 
 <mat-card>
@@ -35,6 +39,7 @@
       <div class="col-md-4"></div>
       <div class="col-md-2" style="padding-left: 2%;">
         <ng-container *ngIf="userRole === 'admin'">
+          
           <button class="Btn" mat-raised-button color="primary" (click)="addForm()">
             <div class="text">Add</div>
           </button>
