--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -56,9 +56,10 @@
           <ng-container *ngFor="let column of selectedColumns">
             <ng-container [matColumnDef]="column">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
-              <td mat-cell *matCellDef="let user">
+              <td mat-cell *matCellDef="let user; let i = index">
                 <ng-container *ngIf="column !== 'actions'; else actionsColumn">
-                  {{ user[column] }}
+                  <ng-container *ngIf="column !== 'serialNumber'">{{ user[column] }}</ng-container>
+                  <ng-container *ngIf="column === 'serialNumber'">{{ getSerialNumber(i) }}</ng-container>
                 </ng-container>
                 <ng-template #actionsColumn>
                   <button mat-icon-button color="primary" aria-label="Edit" (click)="openEditForm(user)">
@@ -67,7 +68,7 @@
                 </ng-template>
               </td>
             </ng-container>
-          </ng-container>
+          </ng-container>          
           <tr mat-header-row *matHeaderRowDef="selectedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: selectedColumns; let even = even; let odd = odd"
             [class.even-row]="even" [class.odd-row]="odd"></tr>
