--- a/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
+++ b/DataCorner/TD/src/app/component/employeetable/employeetable.component.html
@@ -7,10 +7,12 @@
   </button>
   <h2>Trainee List</h2>
   <h2> - {{category}}</h2>
+  <ng-container *ngIf="userRole === 'admin'">
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <button class="Btn1" mat-raised-button color="primary" (click)="addcolumns()">
     <div class="text">Manage Permission</div>
   </button>
+</ng-container>
 </div>
 
 <mat-card>
@@ -23,7 +25,7 @@
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
       </div>
-
+      <ng-container *ngIf="userRole === 'admin'">
       <div class="col-md-3" p>
         <mat-form-field appearance="outline" style="width: 200px;">
           <div class="column-selector">
@@ -34,6 +36,7 @@
           </div>
         </mat-form-field>
       </div>
+    </ng-container>
 
       <div class="col-md-4"></div>
       <div class="col-md-2" style="padding-left: 2%;">
